# aistore-sample

./: .env.example  README.md  ais_config.json  docker-compose.yml  main.py  pyproject.toml
app/: data_loader.py  model.py  train.py  upload_data.py  upload_data_v2.py  upload_data_v3.py
